@@ -88,6 +88,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-18 mar. 01:08]--[2016-10-18 mar. 01:19] =>  0:11
      CLOCK: [2016-10-15 sam. 01:44]--[2016-10-15 sam. 02:37] =>  0:53
      CLOCK: [2016-10-14 ven. 23:01]--[2016-10-15 sam. 00:15] =>  1:14
      CLOCK: [2016-10-12 mer. 03:03]--[2016-10-12 mer. 03:22] =>  0:19
@@ -118,8 +119,10 @@
   - [X] Change DEPENDENCIES file
   - [X] Can't find "TaharezLook/MouseArrow" image or get a segfault
   - [X] Mouse Coords are wrong
-- [ ] Next steps to get a working GUI
+- [-] Next steps to get a working GUI
+  - [X] Hide the system mouse cursor
   - [ ] Seems the resize icon is wrong too
+    Maybe try the Vanilla mouse cursor
   - [ ] Make the exit button work
   - [ ] Maybe add a static image as logo
 **** DONE [test_ogre1.9] Let's test if switching to Ogre1.9
