@@ -1,6 +1,0 @@
-datafilesdir = $(prefix)/share/rainbrurpg/media/layouts
-datafiles_DATA= menu.layout
-
-EXTRA_DIST = $(datafiles_DATA)
-
-
