@@ -1,3 +1,7 @@
+2016-10-18  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/GameEngine.cpp (GameEngine): hide OIS mouse cursor.
+
 2016-10-14  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/GameEngine.cpp (run): Initialize mouse position to 0,0.
